name:                pure-responsive
version:             0.8.0.0
homepage:            purehs.org/doc/pure-responsive
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-responsive.git

library
  build-depends:
    base,
    pure,
    pure-cond,
    pure-prop
  exposed-modules: 
    Pure.Responsive
  hs-source-dirs:      src
  default-language:    Haskell2010
